tests/error/comptime_arg_errors/const_mismatch4.err
Error: Value mismatch (at $FILE:12:12)
   | 
10 | @guppy
11 | def main(n: nat @ comptime) -> None:
12 |     foo[42](n)
   |             ^ Expected constant `42`, got `n`

Guppy compilation failed due to 1 previous error
